docs: cv changed

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <h2>Contacts</h2>
                 <ul>
                     <li><a href="https://vk.com/just_a_memer">Vk</a></li>
+                    <li>Stigma#6055 Discord</li>
                 </ul>
             </nav>
             <section>
